# foamcut

./: .gitignore  CMakeLists.txt  LICENSE.markdown  README.markdown
experiments/: CMakeLists.txt
experiments/serial/: APDU.hpp  AppPacket.cpp  AppPacket.hpp  CMakeLists.txt  Link.cpp  Link.hpp  LinkPair.cpp  LinkPair.hpp  Packet.hpp  Port.cpp  Port.hpp  SerialPackets.hpp  SerialProtocol.cpp  SerialProtocol.hpp  Synchronizer.hpp  hello_test.cpp  port_test.cpp
gui/: #CMakeLists.txt#  CMakeLists.txt  cutdialog.cpp  cutdialog.h  cutdialog.ui  cutplotmgr.cpp  cutplotmgr.h  datimportpage.cpp  datimportpage.h  datimportpage.ui  datimportpage2.ui  datimportwizard.cpp  datimportwizard.h  deploy.bat  fixedarplot.cpp  fixedarplot.h  foamcut_gui.pro  foamcutapp.cpp  foamcutapp.hpp  importdat.cpp  importdat.hpp  importwizard.cpp  importwizard.h  logdoublespinbox.cpp  logdoublespinbox.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movedialog.cpp  movedialog.h  movedialog.ui  playing.ui  qcustomplot.h  settings.cpp  settings.hpp  setupdialog.cpp  setupdialog.h  setupdialog.ui  shapeplotmgr.cpp  (+6 more)
kernel/: CMakeLists.txt  airfoil.cpp  airfoil.hpp  dat_file.cpp  dat_file.hpp  foam.hpp  foamcut_kernel_dll.h  machine.cpp  machine.hpp  ruled_surface.cpp  ruled_surface.hpp  shape.cpp  shape.hpp  spline.cpp  spline.hpp  stepper_info.cpp  stepper_info.hpp
kernel/test/: CMakeLists.txt  airfoil_test.cpp  debug_stream.hpp  hello_test.cpp  ruled_surface_test.cpp  shape_test.cpp  spline_test.cpp
stepper/: CMakeLists.txt
stepper/device/: CMakeLists.txt
stepper/device/archive/: ASIOImpl.hpp  Device.cpp  MemoryAllocator.hpp  Pin.hpp  SList.hpp  SimStepper.hpp
stepper/device/common/: Axis.hpp  CommDictionary.hpp  Commands.hpp  Communicator.cpp  Communicator.hpp  CommunicatorBase.hpp  Device.cpp  Device.hpp  DeviceMessages.hpp  Dictionary.hpp  Engine.cpp  Engine.hpp  HAL.hpp  HALBase.hpp  IDevice.hpp  LimitSwitches.hpp  Line.cpp  Line.hpp  LockGuard.hpp  MemoryAllocator.hpp  MemoryPool.hpp  Message.cpp  Message.hpp  MessagePool.hpp  MessageQueue.hpp  Messages.hpp  Pin.hpp  Pool.hpp  Receiver.cpp  Receiver.hpp  RingBuffer.hpp  SList.hpp  SegregatedStorage.hpp  StaticPool.hpp  StatusFlags.cpp  StatusFlags.hpp  StepDir.hpp  Stepper.cpp  Stepper.hpp  StepperDictionary.hpp  (+1 more)
stepper/device/lpc-p1343/: .gitignore  CMakeLists.txt  HAL.cpp  Logger.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  assert.c  foamcut_device_lpc-p1343.uvoptx  foamcut_device_lpc-p1343.uvprojx  lpc134x.h  main.c  main.cpp  platform.c  projectconfig.h  ring_buffer.h  step_timer.c  step_timer.h  sysdefs.h  sysinit.c  sysinit.h
stepper/device/lpc-p1343/RTE/: RTE_Components.h
stepper/device/lpc-p1343/RTE/Device/LPC1343FBD48/: startup_LPC13xx.s  system_LPC13xx.c
stepper/device/lpc-p1343/core/: rom_drivers.h
stepper/device/lpc-p1343/core/cpu/: cpu.c  cpu.h
stepper/device/lpc-p1343/core/gpio/: gpio.c  gpio.h
stepper/device/lpc-p1343/core/systick/: systick.c  systick.h
stepper/device/lpc-p1343/core/usbcdc/: cdc.h  cdcuser.c  cdcuser.h  config.h  usb.h  usbcfg.h  usbcore.c  usbcore.h  usbdesc.c  usbdesc.h  usbhw.c  usbhw.h  usbuser.c  usbuser.h
stepper/device/nucleo-F401RE_foamcut/: .cproject  .mxproject  .project  nucleo-F401RE_foamcut.ioc
stepper/device/nucleo-F401RE_foamcut/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_uart.c
stepper/device/nucleo-F401RE_foamcut/Inc/: SerialPort.hpp  dma.h  fifo.hpp  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
stepper/device/nucleo-F401RE_foamcut/Src/: SerialPort.cpp  dma.c  gpio.c  main.cpp  stm32f4xx_it.c  tim.c  usart.c
stepper/device/sim/: ASIOImpl.hpp  ASIOReceiver.cpp  ASIOReceiver.hpp  ASIOSender.cpp  ASIOSender.hpp  CMakeLists.txt  Communicator.cpp  Communicator.hpp  Device.cpp  HAL.cpp  HAL.hpp  Lock.hpp  Logger.cpp  Logger.hpp  Machine.cpp  Machine.hpp  MemoryAllocator.hpp  MessageStorage.hpp  Platform.cpp  Platform.hpp  SimComm.cpp  SimComm.hpp  SimCommunicator.cpp  SimCommunicator.hpp  SimStepper.cpp  Simulator.cpp  Simulator.hpp
stepper/host/: CDCLink.cpp  CDCLink.hpp  CMakeLists.txt  Host.cpp  Host.hpp  Link.hpp  Script.cpp  Script.hpp  TCPLink.cpp  TCPLink.hpp  stub.cpp
stepper/host/lib/: CMakeLists.txt  Host.cpp  Host.hpp  HostMessageAllocator.hpp  HostMessages.hpp  ILink.hpp  Link.hpp  MemoryLink.hpp  Script.cpp  Script.hpp  TCPHost.cpp  TCPHost.hpp  TCPLink.cpp  TCPLink.hpp
stepper/host/test/: CMakeLists.txt  debug_stream.hpp  hello_test.cpp  line_test.cpp  log_test.cpp  pool_test.cpp  sim_test.cpp
